# rust_library

muneeb_function/: Cargo.toml
muneeb_function/src/: lib.rs
project/: Cargo.toml
project/src/: main.rs
simplecalculator_function/: Cargo.toml
simplecalculator_function/src/: lib.rs
