[package]
name = "muneeb_function"
version = "0.1.0"
authors = ["Muhammad Muneeb"]
edition = "2018"
description =  "Here is my first rust library"
license = "MIT"
repository = "https://github.com/muhammadmuneeb264/rust_library"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
